<resources>
    <string name="app_name">Book Shop</string>
    <string name="sign_up_question">Bạn chưa có tài khoản?</string>
    <string name="sign_up_action">Đăng ký tài khoản</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="discount_percent">-%d%%</string>
    <string name="sold">Đã bán %d</string>
    <string name="age">%d+</string>
    <string name="default_notification_channel_id">my_channel_id</string>
    <string name="server_client_id">980956550886-brpg82ld4e3vqstisb0b0u9kidkjogk7.apps.googleusercontent.com</string>
    <string name="sign_in_question">Bạn đã có tài khoản?</string>
    <string name="sign_in_action">Đăng nhập ngay</string>

    <string name="label_date">Đặt <font color="#FF0000"><b>*</b></font></string>
    <string name="hint_date">Đặt</string>
    <string name="label_ten">Họ và tên <font color="#FF0000"><b>*</b></font></string>
    <string name="hint_ten">Nhập họ và tên người nhận (ví dụ: Nguyễn Văn A)</string>
    <string name="label_nguyen">Nguyễn</string>
    <string name="hint_nguyen">Nguyễn</string>
    <string name="label_so_dien_thoai">Số điện thoại <font color="#FF0000"><b>*</b></font></string>
    <string name="hint_so_dien_thoai">Nhập số điện thoại (ví dụ: 0901234567)</string>
    <string name="label_quoc_gia">Quốc gia <font color="#FF0000"><b>*</b></font></string>
    <string name="hint_quoc_gia">Quốc gia</string>
    <string name="label_tinh_thanh_pho">Tỉnh/Thành phố <font color="#FF0000"><b>*</b></font></string>
    <string name="hint_tinh_thanh_pho">Chọn tỉnh/thành phố</string>
    <string name="label_phuong_xa">Phường/Xã <font color="#FF0000"><b>*</b></font></string>
    <string name="hint_phuong_xa">Chọn phường/xã</string>
    <string name="label_dia_chi_nhan_hang">Địa chỉ nhận hàng <font color="#FF0000"><b>*</b></font></string>
    <string name="hint_dia_chi_nhan_hang">Nhập số nhà, tên đường (ví dụ: 123 Lê Lợi)</string>
    <string name="label_thanh_toan_mac_dinh">Địa chỉ thanh toán mặc định</string>
    <string name="label_giao_hang_mac_dinh">Địa chỉ giao hàng mặc định</string>

    <string name="label_email">Email <font color="#FF0000"><b>*</b></font></string>
    <string name="hint_email">Nhập địa chỉ email (ví dụ: nguyenvana@example.com)</string>
    <string name="note_password"><b>Lưu ý: </b> <font color="#000000">Mật khẩu phải từ 8–64 ký tự, gồm chữ hoa, chữ thường, số và ký tự đặc biệt, không chứa khoảng trắng</font>
    </string>
    <string name="payment">9704198526191432198</string>
</resources>