<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".presentation.features.address.AddAddressFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txUpdateAddressTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Thêm địa chỉ mới"
            android:background="@color/primary"
            android:textSize="18sp"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:padding="16dp"
            android:textColor="@android:color/white" />

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:src="@drawable/ic_left"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:tint="@color/icon_tint_selector"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:contentDescription="Quay lại"
            app:layout_constraintStart_toStartOf="@id/txUpdateAddressTitle"
            app:layout_constraintTop_toTopOf="@id/txUpdateAddressTitle"
            app:layout_constraintBottom_toBottomOf="@id/txUpdateAddressTitle"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="false"
        app:layout_constraintTop_toBottomOf="@id/layoutTitle"
        app:layout_constraintBottom_toBottomOf="@id/footerContainer">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_ten"
                android:textColor="@color/black"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/editTextTen"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="14sp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_edittext_primary"
                android:hint="@string/hint_ten"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_so_dien_thoai"
                android:layout_marginTop="12dp"
                android:textColor="@color/black"
                android:textSize="14sp"/>
            <EditText
                android:id="@+id/editTextSoDienThoai"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="14sp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_edittext_primary"
                android:hint="@string/hint_so_dien_thoai"
                android:inputType="phone"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_tinh_thanh_pho"
                android:layout_marginTop="12dp"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutTinhThanhPho"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/editTextTinhThanhPho"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textSize="14sp"
                    android:focusable="false"
                    android:cursorVisible="false"
                    android:inputType="none"
                    android:background="@drawable/bg_edittext_primary"
                    android:hint="@string/hint_tinh_thanh_pho"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_down"
                    android:contentDescription="Dropdown arrow"
                    android:layout_marginEnd="16dp"
                    app:tint="@color/grey_dark"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_phuong_xa"
                android:layout_marginTop="12dp"
                android:textColor="@color/black"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutPhuongXa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/editTextPhuongXa"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textSize="14sp"
                    android:background="@drawable/bg_edittext_primary"
                    android:hint="@string/hint_phuong_xa"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_down"
                    android:layout_marginEnd="16dp"
                    app:tint="@color/grey_dark"
                    android:contentDescription="Dropdown arrow"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_dia_chi_nhan_hang"
                android:layout_marginTop="12dp"
                android:textColor="@color/black"/>
            <EditText
                android:id="@+id/editTextDiaChiNhanHang"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="14sp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_edittext_primary"
                android:hint="@string/hint_dia_chi_nhan_hang"/>

            <CheckBox
                android:id="@+id/checkBoxGiaoHangMacDinh"
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_giao_hang_mac_dinh"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_gravity="center"
                    android:text="Loại địa chỉ:"
                    android:textColor="@color/black" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvAddressTypes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:listitem="@layout/item_address_type"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:orientation="horizontal" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>


    <LinearLayout
        android:id="@+id/footerContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:paddingTop="12dp"
        android:paddingBottom="20dp"
        android:elevation="12dp"
        android:clipToPadding="false"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAddAddress"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:text="Xác nhận"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:background="@drawable/bg_button_primary"
            android:backgroundTint="?attr/colorPrimary" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>