<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.features.address.UpdateAddressFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txUpdateAddressTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Cập nhật địa chỉ"
            android:background="@color/primary"
            android:textSize="18sp"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:padding="16dp"
            android:textColor="@android:color/white" />

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:src="@drawable/ic_left"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:tint="@color/icon_tint_selector"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:contentDescription="Quay lại"
            app:layout_constraintStart_toStartOf="@id/txUpdateAddressTitle"
            app:layout_constraintTop_toTopOf="@id/txUpdateAddressTitle"
            app:layout_constraintBottom_toBottomOf="@id/txUpdateAddressTitle"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="false"
        app:layout_constraintTop_toBottomOf="@id/layoutTitle"
        app:layout_constraintBottom_toBottomOf="@id/bottomNav">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_ten"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>

                <EditText
                    android:id="@+id/editTextTen"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textSize="14sp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/bg_edittext_primary"
                    android:hint="@string/hint_ten"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_so_dien_thoai"
                    android:layout_marginTop="12dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>
                <EditText
                    android:id="@+id/editTextSoDienThoai"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textSize="14sp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/bg_edittext_primary"
                    android:hint="@string/hint_so_dien_thoai"
                    android:inputType="phone"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_tinh_thanh_pho"
                    android:layout_marginTop="12dp"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layoutTinhThanhPho"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/editTextTinhThanhPho"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:textSize="14sp"
                        android:background="@drawable/bg_edittext_primary"
                        android:hint="@string/hint_tinh_thanh_pho"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_arrow_down"
                        android:contentDescription="Dropdown arrow"
                        android:layout_marginEnd="16dp"
                        app:tint="@color/grey_dark"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_phuong_xa"
                    android:layout_marginTop="12dp"
                    android:textColor="@color/black"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layoutPhuongXa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/editTextPhuongXa"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:textSize="14sp"
                        android:background="@drawable/bg_edittext_primary"
                        android:hint="@string/hint_phuong_xa"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_arrow_down"
                        android:layout_marginEnd="16dp"
                        app:tint="@color/grey_dark"
                        android:contentDescription="Dropdown arrow"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_dia_chi_nhan_hang"
                    android:layout_marginTop="12dp"
                    android:textColor="@color/black"/>
                <EditText
                    android:id="@+id/editTextDiaChiNhanHang"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textSize="14sp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/bg_edittext_primary"
                    android:hint="@string/hint_dia_chi_nhan_hang"/>

                <CheckBox
                    android:id="@+id/checkBoxGiaoHangMacDinh"
                    android:layout_marginTop="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_giao_hang_mac_dinh"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="Loại địa chỉ:"
                        android:textColor="@color/black" />

                    <include
                        android:id="@+id/btnHouse"
                        layout="@layout/button_address_type"
                        android:layout_marginEnd="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <include
                        android:id="@+id/btnOffice"
                        layout="@layout/button_address_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="12dp"
                android:background="@color/grey_100"/>

            <TextView
                android:id="@+id/btnDeleteAddress"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/white"
                android:text="Xóa địa chỉ"
                android:textColor="@color/red_light"
                android:textAllCaps="false"
                android:gravity="center"
                android:textSize="14sp"
                android:fontFamily="sans-serif"
                android:textStyle="bold"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="12dp"
                android:background="@color/grey_100"/>
        </LinearLayout>
    </ScrollView>


    <include
        android:id="@+id/bottomNav"
        layout="@layout/layout_bottom_container"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>